fixed mobile form font size issue and increased the size of the header and footer on mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -17,12 +17,12 @@ body{
 
 
 
+
 header{
     position: sticky;
     top: 0px;
     width: 100%;
     display: flex;
-    height: 3vw;
     background-image: linear-gradient(to bottom,rgb(241, 246, 255), rgb(145, 205, 254));
     text-indent: 11vw;
     text-align: center;
@@ -411,6 +411,43 @@ div#leftalign p, div#leftalign h3{
     #heading{
         font-size: 7vw;
     }
+
+    textarea{
+        font-size: 1vmax;
+        padding: 2vmin;
+    }
+
+    header{
+        height: 3vh;
+        text-indent: 6vw;
+    }
+
+    header ul{
+        font-size: 1.3vh;
+    }
+
+    header img{
+        width: 5vh;
+        margin-right: -5%;
+    }
+
+    footer{
+        height: 3vh;
+        text-indent: 5vw;
+    }
+
+    footer ul{
+        font-size: 1.3vh;
+        margin-left: -5%;
+    }
+
+    #formbody{
+        height: 100vh;
+    }
+
+    #formfooter{
+        bottom: 0px;
+    }
     
 }
 
@@ -461,6 +498,18 @@ div#leftalign p, div#leftalign h3{
 
     div#halfpicture img{
     width: 30vw;
+    }
+
+    header{
+        height: 3vw;
+    }
+
+    #formbody{
+        height: 150vh;
+    }
+
+    #formfooter{
+        bottom: -50%;
     }
 
 }
